--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.6.3",
     "flowbite": "^2.3.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.4.5"
   }
 }
